--- a/Chess_object_detection.ipynb
+++ b/Chess_object_detection.ipynb
@@ -368,6 +368,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Unzip"
+      ],
+      "metadata": {
+        "id": "ijyhqXai7MNK"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "!unzip chess-positions.zip"
@@ -5391,17 +5400,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Helper functions"
+      ],
+      "metadata": {
+        "id": "EJrSMJ4jfcwW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "train = list(sorted(os.listdir(os.path.join(\"/content\", \"train\")))) \n",
-        "test = list(sorted(os.listdir(os.path.join(\"/content\", \"test\"))))\n",
         "\n",
         "piece_symbols = 'prbnkqPRBNKQ'"
       ],
       "metadata": {
-        "id": "R--OQmDuCTYg"
+        "id": "YMp7pOaU7Edk"
       },
-      "execution_count": null,
+      "execution_count": 175,
       "outputs": []
     },
     {
@@ -5415,9 +5432,9 @@
           "height": 36
         },
         "id": "_AtR16tTipfC",
-        "outputId": "76ab3a00-c763-4ed4-d7b3-0687c7a9b1a1"
+        "outputId": "1c7643b2-9713-41f9-e615-90a5343fe1f0"
       },
-      "execution_count": null,
+      "execution_count": 176,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5430,18 +5447,9 @@
             }
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 176
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Helper functions"
-      ],
-      "metadata": {
-        "id": "EJrSMJ4jfcwW"
-      }
     },
     {
       "cell_type": "code",
