--- a/Chess_object_detection.ipynb
+++ b/Chess_object_detection.ipynb
@@ -456,7 +456,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 452
+          "height": 360
         },
         "id": "-1wiwWAW2nbe",
         "outputId": "01184e90-8b37-4565-f923-fa6d5afb34bc"
@@ -862,23 +862,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import albumentations as A\n",
         "import transforms as T\n",
-        "from albumentations.pytorch.transforms import ToTensorV2\n",
-        "\n",
-        "# Send train=True fro training transforms and False for val/test transforms\n",
-        "# def get_transform(train):\n",
-        "    \n",
-        "#     if train:\n",
-        "#         return A.Compose([\n",
-        "#                             A.HorizontalFlip(0.5),\n",
-        "#                      # ToTensorV2 converts image to pytorch tensor without div by 255\n",
-        "#                             ToTensorV2(p=1.0) \n",
-        "#                         ], bbox_params={'format': 'pascal_voc', 'label_fields': ['labels']})\n",
-        "#     else:\n",
-        "#         return A.Compose([\n",
-        "#                             ToTensorV2(p=1.0)\n",
-        "#                         ], bbox_params={'format': 'pascal_voc', 'label_fields': ['labels']})\n",
         "\n",
         "def get_transform(train):\n",
         "    transforms = []\n",
@@ -1224,6 +1208,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.save(model.state_dict(), 'chess_params')"
+      ],
+      "metadata": {
+        "id": "wGEOSqsP86FO"
+      },
+      "execution_count": 178,
+      "outputs": []
     },
     {
       "cell_type": "code",
